Fix artist description overflow

--- a/themes/tuinfeest/assets/css/responsive.css
+++ b/themes/tuinfeest/assets/css/responsive.css
@@ -224,7 +224,7 @@
 
 
 @media (min-width: 576px) and (max-width: 767.98px) {
-    .artist-content p {
+    .artist-content span {
         display: none;
     }
 }
