--- a/themes/tuinfeest/assets/css/styles.css
+++ b/themes/tuinfeest/assets/css/styles.css
@@ -794,8 +794,7 @@ ul.menu.active {
     width: 100%;
     height: 100%;
     background: #00000090;
-    padding: 0px 30px;
-    padding-bottom: 20px;
+    padding: 20px 30px 40px 30px;
     opacity: 0;
 }
 
@@ -820,7 +819,9 @@ ul.menu.active {
 .artist-content p {
     color: #fff;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.5em;
+    overflow-y: scroll;
+    margin-bottom: 10px;
 }
 
 .artist-content ul.artist-flow {
